@@ -49,6 +49,8 @@ void LuxCoreApp::MenuRendering() {
 		}
 	}
 
+	ImGui::Separator();
+
 	if (session && ImGui::MenuItem("Export")) {
 		nfdchar_t *outPath = NULL;
 		nfdresult_t result = NFD_SaveDialog(NULL, NULL, &outPath);
@@ -86,16 +88,17 @@ void LuxCoreApp::MenuRendering() {
 	}
 
 	if (session && ImGui::MenuItem("Export (glTF)")) {
-//		nfdchar_t *fileName = NULL;
-//		nfdresult_t result = NFD_SaveDialog("gltf", NULL, &fileName);
-//
-//		if (result == NFD_OKAY) {
-//			LA_LOG("Export current scene to file in glTF format: " << fileName);
-//			config->ExportGLTF(fileName);
-//		}
-		config->ExportGLTF("test.gltf");
+		nfdchar_t *fileName = NULL;
+		nfdresult_t result = NFD_SaveDialog("gltf", NULL, &fileName);
+
+		if (result == NFD_OKAY) {
+			LA_LOG("Export current scene to file in glTF format: " << fileName);
+			config->ExportGLTF(fileName);
+		}
 	}
 	
+	ImGui::Separator();
+
 	if (session && ImGui::MenuItem("Bake all objects"))
 		BakeAllSceneObjects();
 
